2_Parser/y.output
Terminals unused in grammar

   LETTER
   DIGIT
   ERROR


State 119 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declaration_list

    2 declaration_list: declaration declaration_list
    3                 | declaration

    4 declaration: var_declaration
    5            | fun_declaration

    6 identifier: ID

    7 number: NUM

    8 var_declaration: VOID identifier SEMI
    9                | INT identifier SEMI
   10                | VOID identifier LBRACE number RBRACE SEMI
   11                | INT identifier LBRACE number RBRACE SEMI

   12 @1: %empty

   13 fun_declaration: INT identifier @1 LPAREN params RPAREN compound_stmt

   14 @2: %empty

   15 fun_declaration: VOID identifier @2 LPAREN params RPAREN compound_stmt

   16 params: param_list
   17       | VOID

   18 param_list: param_list COMMA param
   19           | param

   20 param: INT identifier
   21      | INT identifier LBRACE RBRACE
   22      | VOID identifier
   23      | VOID identifier LBRACE RBRACE

   24 compound_stmt: LCURLY local_declarations stmt_list RCURLY

   25 local_declarations: local_declarations var_declaration
   26                   | %empty

   27 stmt_list: stmt_list stmt
   28          | %empty

   29 stmt: expression_stmt
   30     | compound_stmt
   31     | if_stmt
   32     | iteration_stmt
   33     | return_stmt

   34 expression_stmt: expression SEMI
   35                | SEMI

   36 if_stmt: IF LPAREN expression RPAREN stmt
   37        | IF LPAREN expression RPAREN stmt ELSE stmt

   38 iteration_stmt: WHILE LPAREN expression RPAREN stmt

   39 return_stmt: RETURN SEMI
   40            | RETURN expression SEMI

   41 expression: variable ASSIGN expression
   42           | simple_expression

   43 @3: %empty

   44 variable: identifier @3 LBRACE expression RBRACE
   45         | identifier

   46 simple_expression: add_expression EQ add_expression
   47                  | add_expression NE add_expression
   48                  | add_expression GT add_expression
   49                  | add_expression GE add_expression
   50                  | add_expression LT add_expression
   51                  | add_expression LE add_expression
   52                  | add_expression

   53 add_expression: add_expression PLUS term
   54               | add_expression MINUS term
   55               | term

   56 term: term TIMES factor
   57     | term OVER factor
   58     | factor

   59 factor: LPAREN expression RPAREN
   60       | variable
   61       | NUM
   62       | call

   63 @4: %empty

   64 call: identifier @4 LPAREN args RPAREN

   65 args: arg_list
   66     | %empty

   67 arg_list: arg_list COMMA expression
   68         | expression


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 36 37
ELSE (259) 37
INT (260) 9 11 13 20 21
RETURN (261) 39 40
VOID (262) 8 10 15 17 22 23
WHILE (263) 38
PLUS (264) 53
MINUS (265) 54
TIMES (266) 56
OVER (267) 57
LT (268) 50
LE (269) 51
GT (270) 48
GE (271) 49
EQ (272) 46
NE (273) 47
ASSIGN (274) 41
SEMI (275) 8 9 10 11 34 35 39 40
COMMA (276) 18 67
LPAREN (277) 13 15 36 37 38 59 64
RPAREN (278) 13 15 36 37 38 59 64
LCURLY (279) 24
RCURLY (280) 24
LBRACE (281) 10 11 21 23 44
RBRACE (282) 10 11 21 23 44
ID (283) 6
NUM (284) 7 61
LETTER (285)
DIGIT (286)
ERROR (287)


Nonterminals, with rules where they appear

$accept (33)
    on left: 0
program (34)
    on left: 1, on right: 0
declaration_list (35)
    on left: 2 3, on right: 1 2
declaration (36)
    on left: 4 5, on right: 2 3
identifier (37)
    on left: 6, on right: 8 9 10 11 13 15 20 21 22 23 44 45 64
number (38)
    on left: 7, on right: 10 11
var_declaration (39)
    on left: 8 9 10 11, on right: 4 25
fun_declaration (40)
    on left: 13 15, on right: 5
@1 (41)
    on left: 12, on right: 13
@2 (42)
    on left: 14, on right: 15
params (43)
    on left: 16 17, on right: 13 15
param_list (44)
    on left: 18 19, on right: 16 18
param (45)
    on left: 20 21 22 23, on right: 18 19
compound_stmt (46)
    on left: 24, on right: 13 15 30
local_declarations (47)
    on left: 25 26, on right: 24 25
stmt_list (48)
    on left: 27 28, on right: 24 27
stmt (49)
    on left: 29 30 31 32 33, on right: 27 36 37 38
expression_stmt (50)
    on left: 34 35, on right: 29
if_stmt (51)
    on left: 36 37, on right: 31
iteration_stmt (52)
    on left: 38, on right: 32
return_stmt (53)
    on left: 39 40, on right: 33
expression (54)
    on left: 41 42, on right: 34 36 37 38 40 41 44 59 67 68
variable (55)
    on left: 44 45, on right: 41 60
@3 (56)
    on left: 43, on right: 44
simple_expression (57)
    on left: 46 47 48 49 50 51 52, on right: 42
add_expression (58)
    on left: 53 54 55, on right: 46 47 48 49 50 51 52 53 54
term (59)
    on left: 56 57 58, on right: 53 54 55 56 57
factor (60)
    on left: 59 60 61 62, on right: 56 57 58
call (61)
    on left: 64, on right: 62
@4 (62)
    on left: 63, on right: 64
args (63)
    on left: 65 66, on right: 64
arg_list (64)
    on left: 67 68, on right: 65 67


State 0

    0 $accept: . program $end

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    program           go to state 3
    declaration_list  go to state 4
    declaration       go to state 5
    var_declaration   go to state 6
    fun_declaration   go to state 7


State 1

    9 var_declaration: INT . identifier SEMI
   11                | INT . identifier LBRACE number RBRACE SEMI
   13 fun_declaration: INT . identifier @1 LPAREN params RPAREN compound_stmt

    ID  shift, and go to state 8

    identifier  go to state 9


State 2

    8 var_declaration: VOID . identifier SEMI
   10                | VOID . identifier LBRACE number RBRACE SEMI
   15 fun_declaration: VOID . identifier @2 LPAREN params RPAREN compound_stmt

    ID  shift, and go to state 8

    identifier  go to state 10


State 3

    0 $accept: program . $end

    $end  shift, and go to state 11


State 4

    1 program: declaration_list .

    $default  reduce using rule 1 (program)


State 5

    2 declaration_list: declaration . declaration_list
    3                 | declaration .

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 3 (declaration_list)

    declaration_list  go to state 12
    declaration       go to state 5
    var_declaration   go to state 6
    fun_declaration   go to state 7


State 6

    4 declaration: var_declaration .

    $default  reduce using rule 4 (declaration)


State 7

    5 declaration: fun_declaration .

    $default  reduce using rule 5 (declaration)


State 8

    6 identifier: ID .

    $default  reduce using rule 6 (identifier)


State 9

    9 var_declaration: INT identifier . SEMI
   11                | INT identifier . LBRACE number RBRACE SEMI
   13 fun_declaration: INT identifier . @1 LPAREN params RPAREN compound_stmt

    SEMI    shift, and go to state 13
    LBRACE  shift, and go to state 14

    $default  reduce using rule 12 (@1)

    @1  go to state 15


State 10

    8 var_declaration: VOID identifier . SEMI
   10                | VOID identifier . LBRACE number RBRACE SEMI
   15 fun_declaration: VOID identifier . @2 LPAREN params RPAREN compound_stmt

    SEMI    shift, and go to state 16
    LBRACE  shift, and go to state 17

    $default  reduce using rule 14 (@2)

    @2  go to state 18


State 11

    0 $accept: program $end .

    $default  accept


State 12

    2 declaration_list: declaration declaration_list .

    $default  reduce using rule 2 (declaration_list)


State 13

    9 var_declaration: INT identifier SEMI .

    $default  reduce using rule 9 (var_declaration)


State 14

   11 var_declaration: INT identifier LBRACE . number RBRACE SEMI

    NUM  shift, and go to state 19

    number  go to state 20


State 15

   13 fun_declaration: INT identifier @1 . LPAREN params RPAREN compound_stmt

    LPAREN  shift, and go to state 21


State 16

    8 var_declaration: VOID identifier SEMI .

    $default  reduce using rule 8 (var_declaration)


State 17

   10 var_declaration: VOID identifier LBRACE . number RBRACE SEMI

    NUM  shift, and go to state 19

    number  go to state 22


State 18

   15 fun_declaration: VOID identifier @2 . LPAREN params RPAREN compound_stmt

    LPAREN  shift, and go to state 23


State 19

    7 number: NUM .

    $default  reduce using rule 7 (number)


State 20

   11 var_declaration: INT identifier LBRACE number . RBRACE SEMI

    RBRACE  shift, and go to state 24


State 21

   13 fun_declaration: INT identifier @1 LPAREN . params RPAREN compound_stmt

    INT   shift, and go to state 25
    VOID  shift, and go to state 26

    params      go to state 27
    param_list  go to state 28
    param       go to state 29


State 22

   10 var_declaration: VOID identifier LBRACE number . RBRACE SEMI

    RBRACE  shift, and go to state 30


State 23

   15 fun_declaration: VOID identifier @2 LPAREN . params RPAREN compound_stmt

    INT   shift, and go to state 25
    VOID  shift, and go to state 26

    params      go to state 31
    param_list  go to state 28
    param       go to state 29


State 24

   11 var_declaration: INT identifier LBRACE number RBRACE . SEMI

    SEMI  shift, and go to state 32


State 25

   20 param: INT . identifier
   21      | INT . identifier LBRACE RBRACE

    ID  shift, and go to state 8

    identifier  go to state 33


State 26

   17 params: VOID .
   22 param: VOID . identifier
   23      | VOID . identifier LBRACE RBRACE

    ID  shift, and go to state 8

    $default  reduce using rule 17 (params)

    identifier  go to state 34


State 27

   13 fun_declaration: INT identifier @1 LPAREN params . RPAREN compound_stmt

    RPAREN  shift, and go to state 35


State 28

   16 params: param_list .
   18 param_list: param_list . COMMA param

    COMMA  shift, and go to state 36

    $default  reduce using rule 16 (params)


State 29

   19 param_list: param .

    $default  reduce using rule 19 (param_list)


State 30

   10 var_declaration: VOID identifier LBRACE number RBRACE . SEMI

    SEMI  shift, and go to state 37


State 31

   15 fun_declaration: VOID identifier @2 LPAREN params . RPAREN compound_stmt

    RPAREN  shift, and go to state 38


State 32

   11 var_declaration: INT identifier LBRACE number RBRACE SEMI .

    $default  reduce using rule 11 (var_declaration)


State 33

   20 param: INT identifier .
   21      | INT identifier . LBRACE RBRACE

    LBRACE  shift, and go to state 39

    $default  reduce using rule 20 (param)


State 34

   22 param: VOID identifier .
   23      | VOID identifier . LBRACE RBRACE

    LBRACE  shift, and go to state 40

    $default  reduce using rule 22 (param)


State 35

   13 fun_declaration: INT identifier @1 LPAREN params RPAREN . compound_stmt

    LCURLY  shift, and go to state 41

    compound_stmt  go to state 42


State 36

   18 param_list: param_list COMMA . param

    INT   shift, and go to state 25
    VOID  shift, and go to state 43

    param  go to state 44


State 37

   10 var_declaration: VOID identifier LBRACE number RBRACE SEMI .

    $default  reduce using rule 10 (var_declaration)


State 38

   15 fun_declaration: VOID identifier @2 LPAREN params RPAREN . compound_stmt

    LCURLY  shift, and go to state 41

    compound_stmt  go to state 45


State 39

   21 param: INT identifier LBRACE . RBRACE

    RBRACE  shift, and go to state 46


State 40

   23 param: VOID identifier LBRACE . RBRACE

    RBRACE  shift, and go to state 47


State 41

   24 compound_stmt: LCURLY . local_declarations stmt_list RCURLY

    $default  reduce using rule 26 (local_declarations)

    local_declarations  go to state 48


State 42

   13 fun_declaration: INT identifier @1 LPAREN params RPAREN compound_stmt .

    $default  reduce using rule 13 (fun_declaration)


State 43

   22 param: VOID . identifier
   23      | VOID . identifier LBRACE RBRACE

    ID  shift, and go to state 8

    identifier  go to state 34


State 44

   18 param_list: param_list COMMA param .

    $default  reduce using rule 18 (param_list)


State 45

   15 fun_declaration: VOID identifier @2 LPAREN params RPAREN compound_stmt .

    $default  reduce using rule 15 (fun_declaration)


State 46

   21 param: INT identifier LBRACE RBRACE .

    $default  reduce using rule 21 (param)


State 47

   23 param: VOID identifier LBRACE RBRACE .

    $default  reduce using rule 23 (param)


State 48

   24 compound_stmt: LCURLY local_declarations . stmt_list RCURLY
   25 local_declarations: local_declarations . var_declaration

    INT   shift, and go to state 49
    VOID  shift, and go to state 50

    $default  reduce using rule 28 (stmt_list)

    var_declaration  go to state 51
    stmt_list        go to state 52


State 49

    9 var_declaration: INT . identifier SEMI
   11                | INT . identifier LBRACE number RBRACE SEMI

    ID  shift, and go to state 8

    identifier  go to state 53


State 50

    8 var_declaration: VOID . identifier SEMI
   10                | VOID . identifier LBRACE number RBRACE SEMI

    ID  shift, and go to state 8

    identifier  go to state 54


State 51

   25 local_declarations: local_declarations var_declaration .

    $default  reduce using rule 25 (local_declarations)


State 52

   24 compound_stmt: LCURLY local_declarations stmt_list . RCURLY
   27 stmt_list: stmt_list . stmt

    IF      shift, and go to state 55
    RETURN  shift, and go to state 56
    WHILE   shift, and go to state 57
    SEMI    shift, and go to state 58
    LPAREN  shift, and go to state 59
    LCURLY  shift, and go to state 41
    RCURLY  shift, and go to state 60
    ID      shift, and go to state 8
    NUM     shift, and go to state 61

    identifier         go to state 62
    compound_stmt      go to state 63
    stmt               go to state 64
    expression_stmt    go to state 65
    if_stmt            go to state 66
    iteration_stmt     go to state 67
    return_stmt        go to state 68
    expression         go to state 69
    variable           go to state 70
    simple_expression  go to state 71
    add_expression     go to state 72
    term               go to state 73
    factor             go to state 74
    call               go to state 75


State 53

    9 var_declaration: INT identifier . SEMI
   11                | INT identifier . LBRACE number RBRACE SEMI

    SEMI    shift, and go to state 13
    LBRACE  shift, and go to state 14


State 54

    8 var_declaration: VOID identifier . SEMI
   10                | VOID identifier . LBRACE number RBRACE SEMI

    SEMI    shift, and go to state 16
    LBRACE  shift, and go to state 17


State 55

   36 if_stmt: IF . LPAREN expression RPAREN stmt
   37        | IF . LPAREN expression RPAREN stmt ELSE stmt

    LPAREN  shift, and go to state 76


State 56

   39 return_stmt: RETURN . SEMI
   40            | RETURN . expression SEMI

    SEMI    shift, and go to state 77
    LPAREN  shift, and go to state 59
    ID      shift, and go to state 8
    NUM     shift, and go to state 61

    identifier         go to state 62
    expression         go to state 78
    variable           go to state 70
    simple_expression  go to state 71
    add_expression     go to state 72
    term               go to state 73
    factor             go to state 74
    call               go to state 75


State 57

   38 iteration_stmt: WHILE . LPAREN expression RPAREN stmt

    LPAREN  shift, and go to state 79


State 58

   35 expression_stmt: SEMI .

    $default  reduce using rule 35 (expression_stmt)


State 59

   59 factor: LPAREN . expression RPAREN

    LPAREN  shift, and go to state 59
    ID      shift, and go to state 8
    NUM     shift, and go to state 61

    identifier         go to state 62
    expression         go to state 80
    variable           go to state 70
    simple_expression  go to state 71
    add_expression     go to state 72
    term               go to state 73
    factor             go to state 74
    call               go to state 75


State 60

   24 compound_stmt: LCURLY local_declarations stmt_list RCURLY .

    $default  reduce using rule 24 (compound_stmt)


State 61

   61 factor: NUM .

    $default  reduce using rule 61 (factor)


State 62

   44 variable: identifier . @3 LBRACE expression RBRACE
   45         | identifier .
   64 call: identifier . @4 LPAREN args RPAREN

    LPAREN    reduce using rule 63 (@4)
    LBRACE    reduce using rule 43 (@3)
    $default  reduce using rule 45 (variable)

    @3  go to state 81
    @4  go to state 82


State 63

   30 stmt: compound_stmt .

    $default  reduce using rule 30 (stmt)


State 64

   27 stmt_list: stmt_list stmt .

    $default  reduce using rule 27 (stmt_list)


State 65

   29 stmt: expression_stmt .

    $default  reduce using rule 29 (stmt)


State 66

   31 stmt: if_stmt .

    $default  reduce using rule 31 (stmt)


State 67

   32 stmt: iteration_stmt .

    $default  reduce using rule 32 (stmt)


State 68

   33 stmt: return_stmt .

    $default  reduce using rule 33 (stmt)


State 69

   34 expression_stmt: expression . SEMI

    SEMI  shift, and go to state 83


State 70

   41 expression: variable . ASSIGN expression
   60 factor: variable .

    ASSIGN  shift, and go to state 84

    $default  reduce using rule 60 (factor)


State 71

   42 expression: simple_expression .

    $default  reduce using rule 42 (expression)


State 72

   46 simple_expression: add_expression . EQ add_expression
   47                  | add_expression . NE add_expression
   48                  | add_expression . GT add_expression
   49                  | add_expression . GE add_expression
   50                  | add_expression . LT add_expression
   51                  | add_expression . LE add_expression
   52                  | add_expression .
   53 add_expression: add_expression . PLUS term
   54               | add_expression . MINUS term

    PLUS   shift, and go to state 85
    MINUS  shift, and go to state 86
    LT     shift, and go to state 87
    LE     shift, and go to state 88
    GT     shift, and go to state 89
    GE     shift, and go to state 90
    EQ     shift, and go to state 91
    NE     shift, and go to state 92

    $default  reduce using rule 52 (simple_expression)


State 73

   55 add_expression: term .
   56 term: term . TIMES factor
   57     | term . OVER factor

    TIMES  shift, and go to state 93
    OVER   shift, and go to state 94

    $default  reduce using rule 55 (add_expression)


State 74

   58 term: factor .

    $default  reduce using rule 58 (term)


State 75

   62 factor: call .

    $default  reduce using rule 62 (factor)


State 76

   36 if_stmt: IF LPAREN . expression RPAREN stmt
   37        | IF LPAREN . expression RPAREN stmt ELSE stmt

    LPAREN  shift, and go to state 59
    ID      shift, and go to state 8
    NUM     shift, and go to state 61

    identifier         go to state 62
    expression         go to state 95
    variable           go to state 70
    simple_expression  go to state 71
    add_expression     go to state 72
    term               go to state 73
    factor             go to state 74
    call               go to state 75


State 77

   39 return_stmt: RETURN SEMI .

    $default  reduce using rule 39 (return_stmt)


State 78

   40 return_stmt: RETURN expression . SEMI

    SEMI  shift, and go to state 96


State 79

   38 iteration_stmt: WHILE LPAREN . expression RPAREN stmt

    LPAREN  shift, and go to state 59
    ID      shift, and go to state 8
    NUM     shift, and go to state 61

    identifier         go to state 62
    expression         go to state 97
    variable           go to state 70
    simple_expression  go to state 71
    add_expression     go to state 72
    term               go to state 73
    factor             go to state 74
    call               go to state 75


State 80

   59 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 98


State 81

   44 variable: identifier @3 . LBRACE expression RBRACE

    LBRACE  shift, and go to state 99


State 82

   64 call: identifier @4 . LPAREN args RPAREN

    LPAREN  shift, and go to state 100


State 83

   34 expression_stmt: expression SEMI .

    $default  reduce using rule 34 (expression_stmt)


State 84

   41 expression: variable ASSIGN . expression

    LPAREN  shift, and go to state 59
    ID      shift, and go to state 8
    NUM     shift, and go to state 61

    identifier         go to state 62
    expression         go to state 101
    variable           go to state 70
    simple_expression  go to state 71
    add_expression     go to state 72
    term               go to state 73
    factor             go to state 74
    call               go to state 75


State 85

   53 add_expression: add_expression PLUS . term

    LPAREN  shift, and go to state 59
    ID      shift, and go to state 8
    NUM     shift, and go to state 61

    identifier  go to state 62
    variable    go to state 102
    term        go to state 103
    factor      go to state 74
    call        go to state 75


State 86

   54 add_expression: add_expression MINUS . term

    LPAREN  shift, and go to state 59
    ID      shift, and go to state 8
    NUM     shift, and go to state 61

    identifier  go to state 62
    variable    go to state 102
    term        go to state 104
    factor      go to state 74
    call        go to state 75


State 87

   50 simple_expression: add_expression LT . add_expression

    LPAREN  shift, and go to state 59
    ID      shift, and go to state 8
    NUM     shift, and go to state 61

    identifier      go to state 62
    variable        go to state 102
    add_expression  go to state 105
    term            go to state 73
    factor          go to state 74
    call            go to state 75


State 88

   51 simple_expression: add_expression LE . add_expression

    LPAREN  shift, and go to state 59
    ID      shift, and go to state 8
    NUM     shift, and go to state 61

    identifier      go to state 62
    variable        go to state 102
    add_expression  go to state 106
    term            go to state 73
    factor          go to state 74
    call            go to state 75


State 89

   48 simple_expression: add_expression GT . add_expression

    LPAREN  shift, and go to state 59
    ID      shift, and go to state 8
    NUM     shift, and go to state 61

    identifier      go to state 62
    variable        go to state 102
    add_expression  go to state 107
    term            go to state 73
    factor          go to state 74
    call            go to state 75


State 90

   49 simple_expression: add_expression GE . add_expression

    LPAREN  shift, and go to state 59
    ID      shift, and go to state 8
    NUM     shift, and go to state 61

    identifier      go to state 62
    variable        go to state 102
    add_expression  go to state 108
    term            go to state 73
    factor          go to state 74
    call            go to state 75


State 91

   46 simple_expression: add_expression EQ . add_expression

    LPAREN  shift, and go to state 59
    ID      shift, and go to state 8
    NUM     shift, and go to state 61

    identifier      go to state 62
    variable        go to state 102
    add_expression  go to state 109
    term            go to state 73
    factor          go to state 74
    call            go to state 75


State 92

   47 simple_expression: add_expression NE . add_expression

    LPAREN  shift, and go to state 59
    ID      shift, and go to state 8
    NUM     shift, and go to state 61

    identifier      go to state 62
    variable        go to state 102
    add_expression  go to state 110
    term            go to state 73
    factor          go to state 74
    call            go to state 75


State 93

   56 term: term TIMES . factor

    LPAREN  shift, and go to state 59
    ID      shift, and go to state 8
    NUM     shift, and go to state 61

    identifier  go to state 62
    variable    go to state 102
    factor      go to state 111
    call        go to state 75


State 94

   57 term: term OVER . factor

    LPAREN  shift, and go to state 59
    ID      shift, and go to state 8
    NUM     shift, and go to state 61

    identifier  go to state 62
    variable    go to state 102
    factor      go to state 112
    call        go to state 75


State 95

   36 if_stmt: IF LPAREN expression . RPAREN stmt
   37        | IF LPAREN expression . RPAREN stmt ELSE stmt

    RPAREN  shift, and go to state 113


State 96

   40 return_stmt: RETURN expression SEMI .

    $default  reduce using rule 40 (return_stmt)


State 97

   38 iteration_stmt: WHILE LPAREN expression . RPAREN stmt

    RPAREN  shift, and go to state 114


State 98

   59 factor: LPAREN expression RPAREN .

    $default  reduce using rule 59 (factor)


State 99

   44 variable: identifier @3 LBRACE . expression RBRACE

    LPAREN  shift, and go to state 59
    ID      shift, and go to state 8
    NUM     shift, and go to state 61

    identifier         go to state 62
    expression         go to state 115
    variable           go to state 70
    simple_expression  go to state 71
    add_expression     go to state 72
    term               go to state 73
    factor             go to state 74
    call               go to state 75


State 100

   64 call: identifier @4 LPAREN . args RPAREN

    LPAREN  shift, and go to state 59
    ID      shift, and go to state 8
    NUM     shift, and go to state 61

    $default  reduce using rule 66 (args)

    identifier         go to state 62
    expression         go to state 116
    variable           go to state 70
    simple_expression  go to state 71
    add_expression     go to state 72
    term               go to state 73
    factor             go to state 74
    call               go to state 75
    args               go to state 117
    arg_list           go to state 118


State 101

   41 expression: variable ASSIGN expression .

    $default  reduce using rule 41 (expression)


State 102

   60 factor: variable .

    $default  reduce using rule 60 (factor)


State 103

   53 add_expression: add_expression PLUS term .
   56 term: term . TIMES factor
   57     | term . OVER factor

    TIMES  shift, and go to state 93
    OVER   shift, and go to state 94

    $default  reduce using rule 53 (add_expression)


State 104

   54 add_expression: add_expression MINUS term .
   56 term: term . TIMES factor
   57     | term . OVER factor

    TIMES  shift, and go to state 93
    OVER   shift, and go to state 94

    $default  reduce using rule 54 (add_expression)


State 105

   50 simple_expression: add_expression LT add_expression .
   53 add_expression: add_expression . PLUS term
   54               | add_expression . MINUS term

    PLUS   shift, and go to state 85
    MINUS  shift, and go to state 86

    $default  reduce using rule 50 (simple_expression)


State 106

   51 simple_expression: add_expression LE add_expression .
   53 add_expression: add_expression . PLUS term
   54               | add_expression . MINUS term

    PLUS   shift, and go to state 85
    MINUS  shift, and go to state 86

    $default  reduce using rule 51 (simple_expression)


State 107

   48 simple_expression: add_expression GT add_expression .
   53 add_expression: add_expression . PLUS term
   54               | add_expression . MINUS term

    PLUS   shift, and go to state 85
    MINUS  shift, and go to state 86

    $default  reduce using rule 48 (simple_expression)


State 108

   49 simple_expression: add_expression GE add_expression .
   53 add_expression: add_expression . PLUS term
   54               | add_expression . MINUS term

    PLUS   shift, and go to state 85
    MINUS  shift, and go to state 86

    $default  reduce using rule 49 (simple_expression)


State 109

   46 simple_expression: add_expression EQ add_expression .
   53 add_expression: add_expression . PLUS term
   54               | add_expression . MINUS term

    PLUS   shift, and go to state 85
    MINUS  shift, and go to state 86

    $default  reduce using rule 46 (simple_expression)


State 110

   47 simple_expression: add_expression NE add_expression .
   53 add_expression: add_expression . PLUS term
   54               | add_expression . MINUS term

    PLUS   shift, and go to state 85
    MINUS  shift, and go to state 86

    $default  reduce using rule 47 (simple_expression)


State 111

   56 term: term TIMES factor .

    $default  reduce using rule 56 (term)


State 112

   57 term: term OVER factor .

    $default  reduce using rule 57 (term)


State 113

   36 if_stmt: IF LPAREN expression RPAREN . stmt
   37        | IF LPAREN expression RPAREN . stmt ELSE stmt

    IF      shift, and go to state 55
    RETURN  shift, and go to state 56
    WHILE   shift, and go to state 57
    SEMI    shift, and go to state 58
    LPAREN  shift, and go to state 59
    LCURLY  shift, and go to state 41
    ID      shift, and go to state 8
    NUM     shift, and go to state 61

    identifier         go to state 62
    compound_stmt      go to state 63
    stmt               go to state 119
    expression_stmt    go to state 65
    if_stmt            go to state 66
    iteration_stmt     go to state 67
    return_stmt        go to state 68
    expression         go to state 69
    variable           go to state 70
    simple_expression  go to state 71
    add_expression     go to state 72
    term               go to state 73
    factor             go to state 74
    call               go to state 75


State 114

   38 iteration_stmt: WHILE LPAREN expression RPAREN . stmt

    IF      shift, and go to state 55
    RETURN  shift, and go to state 56
    WHILE   shift, and go to state 57
    SEMI    shift, and go to state 58
    LPAREN  shift, and go to state 59
    LCURLY  shift, and go to state 41
    ID      shift, and go to state 8
    NUM     shift, and go to state 61

    identifier         go to state 62
    compound_stmt      go to state 63
    stmt               go to state 120
    expression_stmt    go to state 65
    if_stmt            go to state 66
    iteration_stmt     go to state 67
    return_stmt        go to state 68
    expression         go to state 69
    variable           go to state 70
    simple_expression  go to state 71
    add_expression     go to state 72
    term               go to state 73
    factor             go to state 74
    call               go to state 75


State 115

   44 variable: identifier @3 LBRACE expression . RBRACE

    RBRACE  shift, and go to state 121


State 116

   68 arg_list: expression .

    $default  reduce using rule 68 (arg_list)


State 117

   64 call: identifier @4 LPAREN args . RPAREN

    RPAREN  shift, and go to state 122


State 118

   65 args: arg_list .
   67 arg_list: arg_list . COMMA expression

    COMMA  shift, and go to state 123

    $default  reduce using rule 65 (args)


State 119

   36 if_stmt: IF LPAREN expression RPAREN stmt .
   37        | IF LPAREN expression RPAREN stmt . ELSE stmt

    ELSE  shift, and go to state 124

    ELSE      [reduce using rule 36 (if_stmt)]
    $default  reduce using rule 36 (if_stmt)


State 120

   38 iteration_stmt: WHILE LPAREN expression RPAREN stmt .

    $default  reduce using rule 38 (iteration_stmt)


State 121

   44 variable: identifier @3 LBRACE expression RBRACE .

    $default  reduce using rule 44 (variable)


State 122

   64 call: identifier @4 LPAREN args RPAREN .

    $default  reduce using rule 64 (call)


State 123

   67 arg_list: arg_list COMMA . expression

    LPAREN  shift, and go to state 59
    ID      shift, and go to state 8
    NUM     shift, and go to state 61

    identifier         go to state 62
    expression         go to state 125
    variable           go to state 70
    simple_expression  go to state 71
    add_expression     go to state 72
    term               go to state 73
    factor             go to state 74
    call               go to state 75


State 124

   37 if_stmt: IF LPAREN expression RPAREN stmt ELSE . stmt

    IF      shift, and go to state 55
    RETURN  shift, and go to state 56
    WHILE   shift, and go to state 57
    SEMI    shift, and go to state 58
    LPAREN  shift, and go to state 59
    LCURLY  shift, and go to state 41
    ID      shift, and go to state 8
    NUM     shift, and go to state 61

    identifier         go to state 62
    compound_stmt      go to state 63
    stmt               go to state 126
    expression_stmt    go to state 65
    if_stmt            go to state 66
    iteration_stmt     go to state 67
    return_stmt        go to state 68
    expression         go to state 69
    variable           go to state 70
    simple_expression  go to state 71
    add_expression     go to state 72
    term               go to state 73
    factor             go to state 74
    call               go to state 75


State 125

   67 arg_list: arg_list COMMA expression .

    $default  reduce using rule 67 (arg_list)


State 126

   37 if_stmt: IF LPAREN expression RPAREN stmt ELSE stmt .

    $default  reduce using rule 37 (if_stmt)
